--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.5.0
+annotated-types==0.7.0
 anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -6,39 +7,65 @@ arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
+autoviz==0.1.905
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
 blinker==1.9.0
+bokeh==3.7.3
+Brotli==1.1.0
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 chess==1.11.2
 click==8.1.8
+colorcet==3.1.0
 comm==0.2.2
 contourpy==1.3.2
 cycler==0.12.1
+dacite==1.9.2
+dash==2.18.2
+dash-bootstrap-components==1.7.1
+dash-core-components==2.0.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+dtale==3.17.0
+emoji==2.14.1
+et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 flake8==7.2.0
+Flask==3.0.3
+Flask-Compress==1.17
 fonttools==4.57.0
 fqdn==1.5.1
+fsspec==2025.5.1
+future==1.0.0
 gitdb==4.0.12
 GitPython==3.1.44
 greenlet==3.2.1
 h11==0.16.0
+holoviews==1.20.2
+htmlmin==0.1.12
 httpcore==1.0.9
 httpx==0.28.1
+hvplot==0.11.3
 idna==3.10
+ImageHash==4.3.1
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.7
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.0
@@ -58,31 +85,50 @@ jupyterlab==4.4.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
+kaleido==0.2.1
 kiwisolver==1.4.8
+linkify-it-py==2.0.3
+llvmlite==0.44.0
+lz4==4.4.4
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
+missingno==0.5.2
 mistune==3.1.3
+multimethod==1.12
 narwhals==1.38.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
 notebook==7.4.2
 notebook_shim==0.2.4
+numba==0.61.0
 numpy==1.26.4
 opencv-python==4.11.0.86
+openpyxl==3.1.5
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
+pandas-dq==1.29
 pandocfilters==1.5.1
+panel==1.7.0
+param==2.2.0
 parso==0.8.4
+patsy==1.0.1
 pexpect==4.9.0
+phik==0.12.4
 pillow==10.4.0
 platformdirs==4.3.8
+plotly==6.1.1
+pluggy==1.6.0
 prometheus_client==0.22.0
 prompt_toolkit==3.0.51
 protobuf==5.29.4
@@ -90,21 +136,31 @@ psutil==7.0.0
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+puremagic==1.29
+pyamg==5.2.1
 pyarrow==20.0.0
 pycodestyle==2.13.0
 pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
 pydeck==0.9.1
 pyflakes==3.3.2
 Pygments==2.19.1
 pyparsing==3.2.3
+pytest==8.3.5
 python-chess==1.999
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-json-logger==3.3.0
 pytz==2025.2
+pyviz_comms==3.0.4
+PyWavelets==1.8.0
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
+retrying==1.3.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.9.4
@@ -118,24 +174,43 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.35
+squarify==0.4.4
 stack-data==0.6.3
+statsmodels==0.14.4
+stchess @ git+https://github.com/TheoLvs/streamlit-chess@58a6171db5768b73b5caabf1d7ab4d96b8db43b9
 streamlit==1.39.0
+strsimpy==0.2.1
+sweetviz==2.3.1
 tenacity==9.1.2
 terminado==0.18.1
+textblob==0.19.0
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+typeguard==4.4.2
 types-python-dateutil==2.9.0.20250516
+typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
+uc-micro-py==1.0.3
 uri-template==1.3.0
 urllib3==2.4.0
+visions==0.8.1
 watchdog==5.0.3
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.0.6
 widgetsnbextension==4.0.14
+wordcloud==1.9.4
+xarray==2025.4.0
+xgboost==1.6.2
+xlrd==2.0.1
+xyzservices==2025.4.0
+ydata-profiling==4.16.1
+zipp==3.22.0
+zstandard==0.23.0
