--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,42 @@ services:
       context: .
     ports:
       - "8501:8501"
-      - "5678:5678"  # puerto para debug
+      - "5678:5678" # puerto para debug
     volumes:
       - .:/app
     container_name: chess_trainer_dev
+    depends_on:
+      - postgres
+    environment:
+      - DATABASE_URL=postgresql://user:userpass@postgres:5432/appdb # para acceder desde dentro del contenedor
+
+  postgres:
+    image: postgres:16
+    container_name: my_postgres
+    restart: always
+    environment:
+      POSTGRES_DB: appdb
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: userpass
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: my_pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: adminpass
+    ports:
+      - "8080:80"
+    depends_on:
+      - postgres
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+
+volumes:
+  pgdata:
+  pgadmin_data:
