--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
+auto-logger==0.1.2
 autoviz==0.1.905
 babel==2.17.0
 beautifulsoup4==4.13.4
@@ -43,6 +44,7 @@ flake8==7.2.0
 Flask==3.0.3
 Flask-Compress==1.17
 fonttools==4.57.0
+fpdf==1.7.2
 fqdn==1.5.1
 fsspec==2025.5.1
 future==1.0.0
