--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
         "./src/modules",
         "./src",
         "./src/db/models",
-        "./src/db"
+        "./src/db",
+        "./src/db",
+        "./src"
     ],
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
@@ -23,5 +25,10 @@
     ],
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
-    "sqltools.useNodeRuntime": true
+    "sqltools.useNodeRuntime": true,
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
