--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+absl-py==2.3.0
+alembic==1.16.1
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -5,10 +7,11 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
+astunparse==1.6.3
 async-lru==2.0.5
 attrs==25.3.0
 auto-logger==0.1.2
-autoviz==0.1.905
+autoviz @ git+https://github.com/AutoViML/AutoViz.git@63f4b3c67ca80d0148b10b4079e3fd5609e32657
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
@@ -21,8 +24,11 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 chess==1.11.2
 click==8.1.8
+cloudpickle==3.1.1
 colorcet==3.1.0
+colorlog==6.9.0
 comm==0.2.2
+ConfigSpace==1.2.1
 contourpy==1.3.2
 cycler==0.12.1
 dacite==1.9.2
@@ -32,9 +38,14 @@ dash-core-components==2.0.0
 dash-daq==0.5.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+dask==2025.5.1
+dask-expr==2.0.0
+dask-jobqueue==0.9.0
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+dill==0.4.0
+distributed==2025.5.1
 dtale==3.17.0
 emoji==2.14.1
 et_xmlfile==2.0.0
@@ -43,15 +54,22 @@ fastjsonschema==2.21.1
 flake8==7.2.0
 Flask==3.0.3
 Flask-Compress==1.17
+flatbuffers==25.2.10
 fonttools==4.57.0
 fpdf==1.7.2
 fqdn==1.5.1
 fsspec==2025.5.1
+func-timeout==4.3.5
 future==1.0.0
+gast==0.6.0
+git-filter-repo==2.47.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-pasta==0.2.0
 greenlet==3.2.1
+grpcio==1.73.0
 h11==0.16.0
+h5py==3.14.0
 holoviews==1.20.2
 htmlmin==0.1.12
 httpcore==1.0.9
@@ -87,11 +105,17 @@ jupyterlab==4.4.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
+kagglehub==0.3.12
 kaleido==0.2.1
+keras==3.10.0
 kiwisolver==1.4.8
+libclang==18.1.1
+lightgbm==4.6.0
 linkify-it-py==2.0.3
 llvmlite==0.44.0
+locket==1.0.0
 lz4==4.4.4
+Mako==1.3.10
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -102,8 +126,12 @@ mdit-py-plugins==0.4.2
 mdurl==0.1.2
 missingno==0.5.2
 mistune==3.1.3
+ml_dtypes==0.5.1
+more-itertools==10.7.0
+msgpack==1.1.1
 multimethod==1.12
 mypy_extensions==1.1.0
+namex==0.1.0
 narwhals==1.38.0
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -115,8 +143,12 @@ notebook==7.4.2
 notebook_shim==0.2.4
 numba==0.61.0
 numpy==1.26.4
+nvidia-nccl-cu12==2.27.3
 opencv-python==4.11.0.86
 openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.16.0
+optuna==4.3.0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -126,6 +158,7 @@ pandocfilters==1.5.1
 panel==1.7.0
 param==2.2.0
 parso==0.8.4
+partd==1.4.2
 patsy==1.0.1
 peewee==3.18.1
 pexpect==4.9.0
@@ -177,6 +210,7 @@ Send2Trash==1.8.3
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.7
 SQLAlchemy==2.0.35
 sqlite-web==0.6.4
@@ -185,16 +219,25 @@ stack-data==0.6.3
 statsmodels==0.14.4
 stchess @ git+https://github.com/TheoLvs/streamlit-chess@58a6171db5768b73b5caabf1d7ab4d96b8db43b9
 stockfish==3.28.0
+stopit==1.1.2
 streamlit==1.39.0
 strsimpy==0.2.1
 sweetviz==2.3.1
+tblib==3.1.0
 tenacity==9.1.2
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow-io-gcs-filesystem==0.37.1
+tensorflow_cpu==2.19.0
+termcolor==3.1.0
 terminado==0.18.1
 textblob==0.19.0
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 toml==0.10.2
+toolz==1.0.0
 tornado==6.4.2
+TPOT==1.0.0
 tqdm==4.67.1
 traitlets==5.14.3
 typeguard==4.4.2
@@ -204,6 +247,7 @@ typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 uc-micro-py==1.0.3
+update-checker==0.18.0
 uri-template==1.3.0
 urllib3==2.4.0
 visions==0.8.1
@@ -215,10 +259,12 @@ websocket-client==1.8.0
 Werkzeug==3.0.6
 widgetsnbextension==4.0.14
 wordcloud==1.9.4
+wrapt==1.17.2
 xarray==2025.4.0
 xgboost==1.6.2
 xlrd==2.0.1
 xyzservices==2025.4.0
 ydata-profiling==4.16.1
+zict==3.0.0
 zipp==3.22.0
 zstandard==0.23.0
