--- a/requirements.txt
+++ b/requirements.txt
@@ -237,7 +237,7 @@ tinycss2==1.4.0
 toml==0.10.2
 toolz==1.0.0
 tornado==6.4.2
-TPOT==1.0.0
+# TPOT==1.0.0
 tqdm==4.67.1
 traitlets==5.14.3
 typeguard==4.4.2
