#56 add filter by source in generate_feature process

--- a/dockerfile.notebooks
+++ b/dockerfile.notebooks
@@ -5,10 +5,14 @@ FROM python:3.11-slim
 
 WORKDIR /notebooks
 
-# Instalación de herramientas necesarias y limpieza en un solo RUN
+# Instalación de herramientas necesarias, GitHub CLI y limpieza en un solo RUN
 RUN apt-get update && \
-    apt-get install -y stockfish vim git git-lfs && \
+    apt-get install -y stockfish vim git git-lfs curl gnupg && \
     git lfs install && \
+    curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | gpg --dearmor -o /usr/share/keyrings/githubcli-archive-keyring.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null && \
+    apt-get update && \
+    apt-get install -y gh && \
     rm -rf /var/lib/apt/lists/*
 
 # Copia y filtrado de requirements
