--- a/requirements_min.txt
+++ b/requirements_min.txt
@@ -38,6 +38,7 @@ SQLAlchemy==2.0.35
 stchess @ git+https://github.com/TheoLvs/streamlit-chess@58a6171db5768b73b5caabf1d7ab4d96b8db43b9
 stockfish==3.28.0
 streamlit==1.39.0
+scikit-learn==1.7.0
 tenacity==9.1.2
 toolz==1.0.0
 tqdm==4.67.1
