#59 add source parameter in generation features and associated tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,12 +2,10 @@
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-testpaths = src/tests
+testpaths = tests
 addopts = 
     -v
     --tb=short
-    --strict-markers
-    --disable-warnings
     --color=yes
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
