--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   chess_trainer:
     build:
@@ -8,6 +7,7 @@ services:
       - "8501:8501"
     volumes:
       - ./data:/app/data
+      - chess_datasets:/app/src/data # Shared volume for generated datasets
 
   notebooks:
     build:
@@ -18,6 +18,7 @@ services:
     volumes:
       - ./notebooks:/notebooks
       - ./data:/notebooks/data
+      - chess_datasets:/notebooks/datasets # Shared volume for datasets access
 
   postgres:
     image: postgres:13
@@ -32,3 +33,4 @@ services:
 
 volumes:
   chess_pgdata:
+  chess_datasets: # New shared volume for Parquet datasets
