feat: Add comprehensive Git LFS configuration and Docker optimization
🔧 Configuration Updates:
- Add complete Git LFS setup guides (English & Spanish)
- Update README files with documentation links
- Optimize dockerfile.notebooks for full repository access
- Configure docker-compose.yml for Git LFS workflow

📚 Documentation Added:
- GIT_LFS_SETUP_GUIDE.md - Complete LFS configuration guide
- GIT_LFS_SETUP_GUIDE_es.md - Spanish version
- DOCKER_NOTEBOOKS_CONFIG.md - Docker container configuration
- configure_git_lfs.sh - Automated LFS setup script

🐳 Docker Improvements:
- WORKDIR updated to /chess_trainer for full repo access
- Git LFS pre-installed and configured
- Automatic LFS file pulling on container start
- Enhanced volume mapping for datasets and notebooks

📁 Repository Structure:
- All large files (*.zip, *.pkl, *.ipynb) managed via Git LFS
- Proper .gitattributes configuration for file tracking
- Optimized for collaborative development workflow

✅ Ready for production deployment with efficient Git LFS workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,11 @@ services:
     ports:
       - "8888:8888"
     volumes:
-      - ./notebooks:/notebooks
-      - ./data:/notebooks/data
-      - chess_datasets:/notebooks/datasets # Shared volume for datasets access
+      - .:/chess_trainer  # Mount entire repository
+      - chess_datasets:/chess_trainer/datasets  # Shared datasets volume
+      - ./data:/chess_trainer/data  # Local data directory
+    environment:
+      - GIT_LFS_SKIP_SMUDGE=1  # Optional: skip LFS download on container start
 
   postgres:
     image: postgres:13
