--- a/requirements.txt
+++ b/requirements.txt
@@ -103,3 +103,7 @@ webencodings==0.5.1
 Werkzeug==3.1.3
 zipp==3.22.0
 zstandard==0.23.0
+mlflow==2.12.1
+scikit-learn==1.5.0
+matplotlib==3.9.0
+seaborn==0.13.2
