feat: Unify data structure - move /src/data to /data and remove /datasets
- Consolidate /app/src/data, /app/datasets, and /app/data into single /app/data directory
- Update docker-compose.yml volume mappings for unified data access
- Update .env variables to point to /app/data paths
- Update script references to use new data paths
- Remove /datasets directory and old data structure
- Add DATA_MIGRATION_REPORT.md with complete migration documentation
- Preserve all parquet files and datasets in new unified structure

Benefits:
- Simplified data structure (single directory instead of 3)
- Consistent paths across all scripts
- Better Docker container data access
- Easier maintenance and backup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "8501:8501"
     volumes:
       - ./data:/app/data
-      - chess_datasets:/app/src/data # Shared volume for generated datasets
+      - chess_datasets:/app/data/shared # Shared volume for generated datasets
 
   notebooks:
     build:
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./notebooks:/notebooks
       - ./data:/notebooks/data
-      - chess_datasets:/notebooks/datasets # Shared volume for datasets access
+      - chess_datasets:/notebooks/data/shared # Shared volume for datasets access
 
   postgres:
     image: postgres:13
