Issue #21: ELO standardization implementation with MLflow PostgreSQL integration
- Resolved merge conflicts in README.md, VERSION, and docker-compose.yml
- Corrected issue references: #23 for SHAP implementation, #21 for ELO standardization
- Integrated MLflow with PostgreSQL backend for experiment tracking
- Added comprehensive ML pipeline with tactical features preprocessing
- Implemented chess error prediction models with standardized ELO fields
- Added PowerShell helpers for ML workflow automation
- Updated documentation structure with MLflow guides and technical docs
- Created test suites for tactical preprocessing and MLflow validation
- Reorganized project documentation into docs/ folder structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: .
       dockerfile: dockerfile.notebooks
     ports:
-      - "8888:8888"
+      - "8889:8888"
     volumes:
       - ./notebooks:/notebooks
       - ./data:/notebooks/data
@@ -30,6 +30,30 @@ services:
       - "5432:5432"
     volumes:
       - chess_pgdata:/var/lib/postgresql/data
+
+  mlflow:
+    image: python:3.11-slim
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./mlruns:/mlflow/mlruns
+      - chess_datasets:/mlflow/data
+      - ./src:/mlflow/src
+    working_dir: /mlflow
+    command: >
+      bash -c "
+        pip install mlflow psycopg2-binary sqlalchemy &&
+        mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri postgresql://chess:chess_pass@postgres:5432/chess_trainer_db --default-artifact-root /mlflow/mlruns
+      "
+    environment:
+      - POSTGRES_USER=chess
+      - POSTGRES_PASSWORD=chess_pass
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=chess_trainer_db
+      - PYTHONPATH=/mlflow
+    depends_on:
+      - postgres
 
 volumes:
   chess_pgdata:
